<resources>
    <string name="app_name">WeatherForecast</string>

    <!-- Location Input -->
    <string name="set_location">Select location input type</string>
    <string name="address">Address</string>
    <string name="coordinates">Geographical Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address_hint">Enter address …</string>

    <!-- Preferences -->
    <string name="theme_header">Theme</string>
    <string name="theme_title">Select theme</string>

    <!-- Navigation -->
    <string name="weather_nav_menu_title">Weather</string>
    <string name="settings_nav_menu_title">Settings</string>
    <string name="daily_forecast_title">Daily Forecast</string>
    <string name="wind_title">Wind</string>
    <string name="wind_speed_title">Speed</string>
    <string name="wind_from_title">From</string>
    <string name="humidity_title">Humidity</string>
    <string name="real_feel_title">Real Feel</string>
    <string name="real_feel_day_title">Day</string>
    <string name="real_feel_morning_title">Morning</string>
    <string name="real_feel_evening_title">Evening</string>
    <string name="real_feel_night_title">Night</string>
    <string name="select_location">Select a location ...</string>
    <string name="preference_file_key">com.example.weatherforecast_sharedpref_key</string>
    <string name="latitude_save_key">latitude_save_key</string>
    <string name="longitude_save_key">longitude_save_key</string>
</resources>