<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.WeatherFragment">

    <TextView
        android:id="@+id/location_type_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:paddingHorizontal="10dp"
        android:text="@string/set_location"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/location_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/address_type"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/address_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/address"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/coordinate_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1.5"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/coordinates"
            android:textSize="13sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/address_input_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/address_hint"
        android:paddingHorizontal="5dp"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/coordinate_input_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="5dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints="32.4279"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="numberDecimal"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="53.6880"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="numberDecimal"
            android:textSize="14sp" />
    </LinearLayout>

    <include layout="@layout/select_location_card"
        android:id="@+id/select_location_layout" />

    <include layout="@layout/current_weather_card"
        android:id="@+id/current_weather_layout"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingHorizontal="10dp"
        android:text="@string/daily_forecast_title"
        android:textStyle="bold"
        android:id="@+id/daily_forecast_title"
        android:visibility="gone" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:strokeWidth="1dp"
        android:id="@+id/daily_forecast_card_view"
        android:visibility="gone" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/daily_forecast_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="5dp" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>